# Lipoic-Server

./: .env  .gitignore  CNAME  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.toml  crates.js  deploy.sh  docker-compose.yml  index.html  search-index.js  settings.html  source-files.js
.devcontainer/: devcontainer.json  setup.sh
.github/workflows/: deploy.yml  pull_request_review.yml
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
mongodb/: docker-compose.yml
resources/: 404.html
router/: all.html  fn.cors_stage.html  fn.rocket.html  fn.stage.html  index.html  sidebar-items.js  struct.Config.html
router/apis/: fn.stage.html  index.html  sidebar-items.js
router/apis/authentication/: fn.create_and_update_user_info.html  fn.google_oauth.html  fn.google_oauth_code.html  fn.login.html  fn.sign_up.html  fn.stage.html  index.html  sidebar-items.js  struct.RequestIp.html  (+1 more)
router/catch/: fn.not_found.html  fn.stage.html  index.html  sidebar-items.js
router/data/: index.html  sidebar-items.js
router/db/: fn.db_init.html  index.html  sidebar-items.js
router/resource/: fn.hello_world.html  fn.stage.html  index.html  sidebar-items.js
script/: deploy.sh  genrsa.sh
script/mongodb/: docker-compose.yml
src/: main.rs  util.rs
src/data/: response.rs
src/database/: Cargo.toml
src/main/: Cargo.toml
src/main/src/: main.rs
src/router/: Cargo.toml  catch.rs.html  db.rs.html  lib.rs.html  resource.rs.html
src/util/: Cargo.toml
src/util/src/: bcrypt.rs  email.rs  jwt.rs  lib.rs  oauth.rs  util.rs
src/util/tests/: bcrypt_test.rs  email_test.rs  jwt_test.rs  oauth_test.rs  util_test.rs
(+96 files in other folders)
