[package]
authors = ["Madeline Sparkle", "The Contributors of Lipoic Organization"]
description = "Backend server for Lipoic"
edition = "2021"
name = "lipoic_server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_contrib = "0.4.10"
serde = "1.0"
serde_derive = "1.0"
