[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1.0"
jsonwebtoken = "8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
bcrypt = "0.13"